# Arbvoy

./: .env.example  .gitignore  ARBVOY_CODEX_PROMPT.md  README.md  backtest-methods.md  pyproject.toml  run.py
arbvoy/: config.py  exceptions.py  orchestrator.py  reporting.py
arbvoy/audit/: logger.py
arbvoy/backtest/: engine.py  kalshi_history.py  models.py  report.py  robinhood_history.py  spot_history.py
arbvoy/evolution/: fitness.py  prompt_builder.py  shadow_tester.py  shinka.py  strategy_parser.py
arbvoy/execution/: executor.py  kalshi_client.py  models.py  robinhood_client.py
arbvoy/feeds/: kalshi_feed.py  kalshi_history_probe.py  kalshi_probe.py  kalshi_tickers_by_date.py  models.py  robinhood_feed.py  robinhood_history_probe.py
arbvoy/journal/: db.py  writer.py
arbvoy/risk/: governor.py
arbvoy/signals/: models.py  probability_model.py  signal_engine.py  vol_estimator.py
arbvoy/strategy/: defaults.py  models.py  registry.py  selector.py
artifacts/: backtest_points.csv  backtest_report.html  backtest_trades.csv  dry_run_report.csv  dry_run_report.html  robinhood_history.csv
artifacts/backtest_26Feb25/: KXBTC-26FEB2504-B65625.xlsx  KXBTC-26FEB2509-B66125.xlsx  KXBTC-26FEB2509-B66375.xlsx  KXBTC-26FEB2511-B67125.xlsx  KXBTC-26FEB2512-B68375.xlsx  KXBTC-26FEB2515-B69125.xlsx  KXBTC-26FEB2516-B69125.xlsx  KXBTC-26FEB2516-B69375.xlsx  KXBTC-26FEB2517-B68750.xlsx  (+26 more)
tests/: conftest.py  test_evolution_cycle.py  test_executor.py  test_fitness.py  test_probability_model.py  test_risk_governor.py  test_signal_engine.py  test_strategy_parser.py
