[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arbvoy"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.9",
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
include = ["arbvoy*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
exclude = ["tests/"]

